<resources>
    <string name="app_name">Sleeping pets</string>
    <string name="menu_my_page">My page</string>
    <string name="menu_my_pets">My pets</string>
    <string name="menu_rating">Rating</string>
    <string name="menu_search">Find a friend</string>
    <string name="menu_suggestions">Suggestions</string>
    <string name="menu_alarm">Alarm</string>
    <string name="facebook_app_id">2592644530834639</string>
    <string name="fb_login_protocol_scheme">fb2592644530834639</string>
    <integer name="com_vk_sdk_AppId">7784017</integer>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>